--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.12.0",
     "react-scripts": "^5.0.1",
